--- a/dokumentointi/pit/201502120052/index.html
+++ b/dokumentointi/pit/201502120052/index.html
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>5</td>
-            <td>76% <div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">77/101</div></div></td>
-            <td>64% <div class="coverage_bar"><div class="coverage_complete" style="width:64%"></div><div class="coverage_ledgend">35/55</div></div></td>
+            <td>76% <div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">83/109</div></div></td>
+            <td>65% <div class="coverage_bar"><div class="coverage_complete" style="width:65%"></div><div class="coverage_ledgend">36/55</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,17 +93,17 @@
     <tbody>
 
         <tr>
-            <td><a href="./kalastajapeli.domain/index.html">kalastajapeli.domain</a></td>
+            <td><a href="./kalastajapeli.oliot/index.html">kalastajapeli.oliot</a></td>
             <td>4</td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">46/46</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">21/21</div></div></td>
+            <td><div class="coveragePercentage">95% </div><div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">56/59</div></div></td>
+            <td><div class="coveragePercentage">93% </div><div class="coverage_bar"><div class="coverage_complete" style="width:93%"></div><div class="coverage_ledgend">28/30</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./kalastajapeli.peli/index.html">kalastajapeli.peli</a></td>
             <td>1</td>
-            <td><div class="coveragePercentage">56% </div><div class="coverage_bar"><div class="coverage_complete" style="width:56%"></div><div class="coverage_ledgend">31/55</div></div></td>
-            <td><div class="coveragePercentage">41% </div><div class="coverage_bar"><div class="coverage_complete" style="width:41%"></div><div class="coverage_ledgend">14/34</div></div></td>
+            <td><div class="coveragePercentage">54% </div><div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">27/50</div></div></td>
+            <td><div class="coveragePercentage">32% </div><div class="coverage_bar"><div class="coverage_complete" style="width:32%"></div><div class="coverage_ledgend">8/25</div></div></td>
         </tr>
 
      </tbody>
